--- a/web.html
+++ b/web.html
@@ -1,1 +1,2 @@
-Hi There ! My first webpage using TF !!!
+You can download my page from here:
+https://s3.ap-south-1.amazonaws.com/s3-website-test.myhashicorp.com/webpage.html
