--- a/web.html
+++ b/web.html
@@ -30,22 +30,22 @@
     <center> <h1> My Skills </h1> </center>   
 <p>HTML</p>
 <div class="container">
-  <div class="skills html">90%</div>
+  <div class="skills Amazon Web Services">90%</div>
 </div>
 
 <p>CSS</p>
 <div class="container">
-  <div class="skills css">80%</div>
+  <div class="skills Terraform">80%</div>
 </div>
 
 <p>JavaScript</p>
 <div class="container">
-  <div class="skills js">65%</div>
+  <div class="skills Kubernetes">75%</div>
 </div>
 
 <p>PHP</p>
 <div class="container">
-  <div class="skills php">60%</div>
+  <div class="skills Ansible">70%</div>
 </div>
 </body>     
 </html>  
