--- a/web.html
+++ b/web.html
@@ -20,10 +20,10 @@
   color: white; /* White text color */
 }
 
-.html {width: 90%; background-color: #04AA6D;} /* Green */
-.css {width: 80%; background-color: #2196F3;} /* Blue */
-.js {width: 65%; background-color: #f44336;} /* Red */
-.php {width: 60%; background-color: #808080;} /* Dark Grey */
+.Amazon Web Services {width: 90%; background-color: #04AA6D;} /* Green */
+.Terraform {width: 80%; background-color: #2196F3;} /* Blue */
+.Kubernetes {width: 65%; background-color: #f44336;} /* Red */
+.Ansible {width: 60%; background-color: #808080;} /* Dark Grey */
 </style>   
 </head>    
 <body>    
