--- a/web.html
+++ b/web.html
@@ -20,32 +20,38 @@
   color: white; /* White text color */
 }
 
-.Amazon Web Services {width: 90%; background-color: #04AA6D;} /* Green */
+.Aws {width: 60%; background-color: #730666;} /* Dark Grey */
 .Terraform {width: 80%; background-color: #2196F3;} /* Blue */
 .Kubernetes {width: 65%; background-color: #f44336;} /* Red */
 .Ansible {width: 60%; background-color: #808080;} /* Dark Grey */
+.Jenkins {width: 60%; background-color: #109464;} /* Dark Grey */
 </style>   
 </head>    
 <body>    
     <center> <h1> My Skills </h1> </center>   
-<p>HTML</p>
+<p>Amazon Web Services</p>
 <div class="container">
-  <div class="skills Amazon Web Services">90%</div>
+  <div class="skills Aws">90%</div>
 </div>
 
-<p>CSS</p>
+<p>Terraform</p>
 <div class="container">
   <div class="skills Terraform">80%</div>
 </div>
 
-<p>JavaScript</p>
+<p>Kubernetes</p>
 <div class="container">
   <div class="skills Kubernetes">75%</div>
 </div>
 
-<p>PHP</p>
+<p>Ansible</p>
 <div class="container">
   <div class="skills Ansible">70%</div>
+</div>
+
+<p>Jenkins</p>
+<div class="container">
+  <div class="skills Jenkins">70%</div>
 </div>
 </body>     
 </html>  
